--- a/views/partials/admin-navbar.hbs
+++ b/views/partials/admin-navbar.hbs
@@ -13,12 +13,10 @@
     <div class="nav-profile_icons">
       <div class="nav-profile">
         <div class="nav-profile-img">
-          <img
-            src="https://sun1-87.userapi.com/impf/lrot46ZLQR-DlGYVeAFMQL-mXiFYTXpLIZ8QUw/izdYd4HvDpE.jpg?size=400x0&quality=90&sign=69aec8c5ce41173fd51d5a5b9b053f45&ava=1"
-            alt="admin">
+          <img src="https://telegram.org/file/811140509/b45/dQTLEwKZ9gs.22232.gif/4580677d940852f30e" alt="admin">
         </div>
         <div class="nav-profile-name">
-          <p class="profile-name">Диана Хабалова</p>
+          <p class="profile-name">{{user.name}} {{user.surname}}</p>
         </div>
       </div>
       <div class="nav-icons">
