--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -59,23 +59,23 @@
         <form action="/profile/{{user.id}}" method="POST">
           <div class="profile-list-data-section">
             <div class="input-field">
-              <label for="name">Страна</label>
+              <label for="country">Страна</label>
               <input type="text" id="country" name="country" value="{{user.country}}" disabled>
             </div>
             <div class="input-field">
-              <label for="surname">Город</label>
+              <label for="town">Город</label>
               <input type="text" id="town" name="town" value="{{user.town}}" disabled>
             </div>
             <div class="input-field">
-              <label for="name">Край/Область/Регион</label>
+              <label for="region">Край/Область/Регион</label>
               <input type="text" id="region" name="region" value="{{user.region}}" disabled>
             </div>
             <div class="input-field">
-              <label for="name">Улица, дом, квартира</label>
+              <label for="address">Улица, дом, квартира</label>
               <input type="text" id="address" name="address" value="{{user.address}}" disabled>
             </div>
             <div class="input-field">
-              <label for="name">Почтовый индекс</label>
+              <label for="zipcode">Почтовый индекс</label>
               <input type="number" id="zipcode" name="zipcode" value="{{user.zipcode}}" disabled>
             </div>
           </div>
