--- a/views/admin-home.hbs
+++ b/views/admin-home.hbs
@@ -47,7 +47,7 @@
             <td>{{phone}}</td>
             <td>{{totalCost}}</td>
             <td>
-              <button class="status ordered">Заказано</button>
+              <button class="status {{status}}">{{status}}</button>
               <a href="/admin/order/{{id}}"><button class="status passing">Перейти</button></a>
             </td>
           </tr>         
