--- a/public/css/adminpages/admin-orders.css
+++ b/public/css/adminpages/admin-orders.css
@@ -1,3 +1,5 @@
+@import '/public/css/adminpages/order-status.css';
+
 .admin-panel .admin-orders-panel .panel-heading {
   display: flex;
   justify-content: left;
@@ -205,62 +207,5 @@
 
 
 
-
-
-/* Statuses */
-
-.admin-panel .home-panel-orders .new-orders tbody tr td .status {
-  width: 90px;
-  height: 25px;
-  text-align: center;
-  vertical-align: center;
-  color: #fff;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 11px;
-  border: none;
-  border-radius: 5px;
-}
-
-
-/* перейти */
-.admin-panel .home-panel-orders .new-orders tbody tr td .passing {
-  background: rgba(154, 154, 154, 0.2);
-  color: rgb(154, 154, 154);
-}
-
-.admin-panel .home-panel-orders .new-orders tbody tr td .passing:hover {
-  color: rgb(51, 51, 51);
-}
-
-/* новый */
-.admin-panel .home-panel-orders .new-orders tbody tr td .new {
-  background: linear-gradient(180deg, #ede7f6 , #673ab7 );
-}
-
-/* обработка */
-.admin-panel .home-panel-orders .new-orders tbody tr td .processing {
-  background: linear-gradient(180deg, #80d8ff , #0091ea );
-}
-
-/* заказано */
-.admin-panel .home-panel-orders .new-orders tbody tr td .ordered {
-  background: linear-gradient(180deg, #ffe57f, #ffab00 );
-}
-
-/* доставка */
-.admin-panel .home-panel-orders .new-orders tbody tr td .delivery {
-  background: linear-gradient(180deg, #a7ffeb, #00bfa5 );
-}
-
- /* выполнен */
-.admin-panel .home-panel-orders .new-orders tbody tr td .completed {
-  background: linear-gradient(180deg, #ccff90, #64dd17 );
-}
-
-/* отменен */
-.admin-panel .home-panel-orders .new-orders tbody tr td .rejected {
-  background: linear-gradient(180deg, #795548, #3e2723 );
-}
 
 
