Added add product admin page functionality

--- a/public/css/adminpages/admin-catalog.css
+++ b/public/css/adminpages/admin-catalog.css
@@ -137,6 +137,10 @@
   font-weight: 700;
 }
 
+.admin-panel .home-panel-catalog .add-product-btn {
+  margin-top: 10px;
+}
+
 .admin-panel .home-panel-catalog .catalog-tabs {
   margin-top: 20px;
   display: flex;
