--- a/views/admin-catalog.hbs
+++ b/views/admin-catalog.hbs
@@ -47,6 +47,9 @@
   </div>
   <div class="home-panel-catalog">
     <h2>Каталог</h2>
+    <div class="add-product-btn">
+      <a href="/admin/product/add"><button class="status passing">Добавить</button></a>
+    </div>
     <div class="catalog-tabs">
       {{#each categories}}
       <button class="category-tab">{{title}}</button>
