Added notification circles

--- a/views/admin-orders.hbs
+++ b/views/admin-orders.hbs
@@ -47,7 +47,7 @@
           <td>{{totalCost}}</td>
           <td>
             <button class="status {{status}}">{{status}}</button>
-            <a href="/admin/order/{{id}}"><button class="status passing">Перейти</button></a>
+            <a href="/admin/order/{{id}}" target="_blank"><button class="status passing">Перейти</button></a>
           </td>
         </tr>
         <tr class="order-brief-info-section">
