--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -13,7 +13,6 @@ body {
 
 /* navbar */
 
-
 .admin-nav {
   width: 100%;
   max-height: 60px;
@@ -237,5 +236,60 @@ body {
   width: 100%;
   padding: 30px 5%;
   height: 100%;
+}
+
+/* notifications */
+
+.bell {
+  position: relative;
+  cursor: pointer;
+}
+
+.bell .bell-notification {
+  display: none;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  border: 2px solid #fff;
+  background: #ffc107;
+  color: #000;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 15px;
+  font-size: 7px;
+  font-weight: 700;
+}
+
+.bell .bell-notification p {
+  margin-top: -1px;
+}
+
+.message {
+  position: relative;
+  cursor: pointer;
+}
+
+.message .message-notification {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  border: 2px solid #fff;
+  background: #03a9f4;
+  color: #000;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 15px;
+  font-size: 7px;
+  font-weight: 700;
+}
+
+.message .message-notification p {
+  margin-top: -1px;
 }
 
