--- a/views/partials/admin-navbar.hbs
+++ b/views/partials/admin-navbar.hbs
@@ -21,11 +21,13 @@
       </div>
       <div class="nav-icons">
         <ul>
-          <li>
+          <li class="message">
             <p><i class="material-icons">mail_outline</i></p>
+            <div class="message-notification"><p>99</p></div>
           </li>
-          <li>
+          <li class="bell">
             <p><i class="material-icons">notifications_none</i></p>
+            <div class="bell-notification"><p>{{newOrders.length}}</p></div>
           </li>
         </ul>
       </div>
