--- a/views/admin-catalog.hbs
+++ b/views/admin-catalog.hbs
@@ -13,11 +13,11 @@
       <div class="search-by">
         <div class="search-by-id-number">
           <label>Артикул</label>
-          <input type="number">
+          <input type="number" id="search-by-id">
         </div>
         <div class="search-by-title">
           <label>Название</label>
-          <input type="text">
+          <input type="text" id="search-by-title">
         </div>
       </div>
     </div>
@@ -45,6 +45,23 @@
       </div>
     </div>
   </div>
+
+  <div class="search-home-panel-catalog">
+    <table class="search-catalog-items">
+      <thead>
+        <tr>
+          <th>Артикул</th>
+          <th>Название</th>
+          <th>Остаток</th>
+          <th>Стоимость</th>
+          <th>Действия</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
   <div class="home-panel-catalog">
     <h2>Каталог</h2>
     <div class="add-product-btn">
